refactored main.js

--- a/prepros.config
+++ b/prepros.config
@@ -881,10 +881,26 @@
     },
     "files": [
       {
+        "file": "src/js/main.2.js",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "tasks": {
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "src/js/main.js",
         "config": {
           "autoCompile": true,
+          "sourceMap": true,
           "tasks": {
+            "bundle-js": {
+              "enable": true
+            },
             "minify-js": {
               "enable": false
             }
